--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "eslint-config-george-lint",
-  "version": "1.0.8",
+  "name": "eslint-config-enmon",
+  "version": "1.0.0",
   "description": "ESLint and Prettier Config by George",
   "keywords": [
     "javascript",
