--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "prettier": "2.8.7"
+    "prettier": "2.8.7",
+    "typescript": "5.0.4"
   },
   "scripts": {
     "lint": "eslint .",
