--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.7",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2 || ^5.0.0"
   },
   "devDependencies": {
     "@types/node": "16.18.23",
