--- a/package.json
+++ b/package.json
@@ -35,6 +35,20 @@
     "prettier": "^2.8.7",
     "typescript": "^4.4.2 || ^5.0.0"
   },
+  "peerDependenciesMeta": {
+    "eslint-plugin-jsx-a11y": {
+      "optional": true
+    },
+    "eslint-plugin-react": {
+      "optional": true
+    },
+    "eslint-plugin-react-hooks": {
+      "optional": true
+    },
+    "eslint-plugin-unicorn": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@types/node": "16.18.23",
     "@typescript-eslint/eslint-plugin": "5.58.0",
