--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "repository": "https://github.com/ENMON-Technologies/eslint-config-enmon",
   "author": "ENMON-Technologies",
   "license": "MIT",
+  "packageManager": "yarn@4.1.1",
+  "engines": {
+    "node": ">=20",
+    "yarn": ">=4"
+  },
   "dependencies": {
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
